<resources>
    <string name="app_name">Monthly Finance</string>

    <string name="food">Food</string>
    <string name="bill">Living services</string>
    <string name="entertainment">Entertainment</string>
    <string name="home">House expenses</string>
    <string name="health">Health</string>
    <string name="transport">Transport</string>
    <string name="etc">Etc</string>
    <string name="dress">Dress</string>
    <string name="family">Family</string>

    <string name="expense_fragment">Your expenses</string>
    <string name="expense_fragment_description">Expenses summary for this month</string>
    <string name="expense">Expense</string>
    <string name="group_name">Group name</string>

    <string name="product_name">Product\'s name</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Amount of product</string>
    <string name="calculation_unit">Calculation unit</string>
    <string name="calculation_unit_hint">Unit</string>
    <string name="account">Account</string>
    <string name="cost">Cost</string>
    <string name="cost_hint">Total for this product</string>
    <string name="date">Date</string>
    <string name="current_total">Total / Current cash</string>

    <string name="add_product">Add to list products</string>
    <string name="all_product">All products</string>
    <string name="total_cost">Enter total cost:</string>
    <string name="total_expense_this_month">Total expenses this month</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="sample_1">Chicken</string>
    <string name="sample_2">Vegetable</string>
    <string name="sample_3">Fast food</string>
    <string name="sample_4">Rice</string>
    <string name="sample_5">Drink</string>
    <string name="sample_6">Shirt</string>
    <string name="sample_7">Shoe</string>
    <string name="sample_8">Dress</string>
    <string name="sample_9">Jacket</string>
    <string name="sample_10">Pants</string>
    <string name="sample_11">Copier</string>
    <string name="sample_12">Book</string>
    <string name="sample_13">Office supplies</string>
    <string name="sample_14">Desktop computer</string>
    <string name="sample_15">Laptop</string>
    <string name="sample_16">Mobile phone</string>
    <string name="sample_17">Watch</string>
    <string name="sample_18">Mouse</string>
    <string name="sample_19">Camera</string>
    <string name="sample_20">USB</string>
    <string name="sample_21">Headset</string>
    <string name="sample_22">Lamp</string>
    <string name="sample_23">Fan</string>
    <string name="sample_24">TV</string>
    <string name="sample_25">Gas</string>
    <string name="sample_26">Patrol</string>
    <string name="sample_27">Oil</string>
    <string name="sample_28">Band Aid</string>
    <string name="sample_29">Syringe</string>
    <string name="sample_30">Drug</string>

    <string name="welcome">Welcome, Username!</string>
    <string name="sign_out">Sign Out!</string>

    <string name="overview">OVERVIEW</string>
    <string name="this_month_expense">THIS MONTH EXPENSE</string>
    <string name="this_month_budget">THIS MONTH BUDGET</string>
    <string name="add_bill_reminder">Add bill reminder</string>
    <string name="add_transfer">Add transfer</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>

    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="statistic">Statistic</string>
    <string name="recommendation">Recommendation</string>

    <string name="product_group">Product Group</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember">Remember me</string>
    <string name="email">Email</string>

    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="bank">Bank</string>
    <string name="currency">Currency</string>

    <string name="init_info">Please init your info</string>
    <string name="init_balances">Init your balances</string>
    <string name="init_balance">Initial balance</string>

    <string name="budget_title">Your budget</string>
    <string name="total_payable">TOTAL PAYABLE</string>

    <string name="recommend">Recommendation</string>

    <string name="enter_name">Enter a name</string>
    <string name="bought_products">Bought products</string>
    <string name="recommend_products">Recommended for you</string>

    <string name="pick_image">Pick an image</string>

    <string name="no_recommend">No product to recommend</string>

    <string name="edit_conf">Edit confidence</string>
    <string name="conf">Confidence</string>
    <string name="edit_supp">Edit support</string>
    <string name="supp">Support</string>

    <string name="enter_income">Enter your income</string>
    <string name="enter_amount_cash">Enter cash amount</string>
    <string name="enter_amount_bank">Enter bank amount</string>
    <string name="enter_amount_credit">Enter credit amount</string>
    <string name="enter_amount_transfer">Amount need to be transferred</string>
    <string name="source">Source</string>
    <string name="target">Target</string>

    <string name="selected_item">This account is selected</string>

    <string name="transaction_saved">Transaction\'s saved</string>

    <string name="error">An error occur</string>
    <string name="error_lower_than_minimum">Your balance(s) is lower than minimum limit</string>
    <string name="error_higher_than_income">This amount must be lower than total income</string>
    <string name="error_higher_than_max">This amount must be lower than max source</string>
    <string name="error_invalid_denominations">Your balance(s) has invalid denominations</string>
    <string name="error_out_of_budget_limit">Out of budget limit</string>
    <string name="error_empty_bought_products">You haven\'t bought any product</string>
    <string name="error_logcat">You have an error. Please see it in logcat</string>
    <string name="error_not_enough_budget">Your cash and credit balance is not enough. Please pay some money into them or transfer from bank</string>
    <string name="error_not_enough_cash">Your cash balance is not enough. We had to use your credit account</string>
    <string name="error_missing_info">You\'re missing some information</string>
    <string name="cash_updated">Your cash balance is up to date</string>
    <string name="info_saved">Your info is saved</string>
    <string name="info_save_failed">Failed to store you data</string>
    <string name="deleted">Deleted</string>
    <string name="press_again">Press again to access form</string>
    <string name="this_month_expense_chart">This month expense chart</string>
    <string name="this_month_cash_chart">This month cash flow chart</string>
    <string name="error_not_pick_account">You\'re missing source or target account</string>

    <string name="done_init_algorithm">Done set up recommendation</string>

    <string name="supp_title">The support of X with respect to T is defined as the proportion of transactions T in all transactions which contains item set X.</string>
    <string name="mean">It means:</string>
    <string name="supp_contain">Number of transactions contain X</string>
    <string name="all_transactions">Number of completed transactions</string>

    <string name="conf_title_1">Confidence is an indication of how often the rule has been found to be true.</string>
    <string name="conf_title_2">The confidence of a rule, X => Y, with respect to a set of transactions T, is the proportion of the transactions that contains X which also contains Y</string>

    <string name="enter_and_cont">I knew and will help to enter this values</string>

    <string name="support_us">Support us</string>

    <string name="split">Split this income</string>

    <string name="account_title">ACCOUNT (DEFAULT CURRENCY: )</string>
    <string name="balance_title">Total Balance</string>

    <string name="most_sale">Most sale</string>

    <string name="usd">USD</string>
    <string name="vnd">VND</string>

    <string-array name="currency">
        <item>USD</item>
        <item>VND</item>
    </string-array>

</resources>
