<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_us"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="10dip"
                android:fontFamily="sans-serif-condensed"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:fontFamily="monospace"
                android:text="@string/supp_title"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:fontFamily="monospace"
                android:text="@string/mean"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="Supp(X) = "
                    android:textColor="#555"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="@string/supp_contain"
                        android:textColor="#555"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="2dip"
                        android:layout_marginTop="3dip"
                        android:background="#555" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="@string/all_transactions"
                        android:textColor="#555"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:fontFamily="monospace"
                android:text="@string/conf_title_1"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:fontFamily="monospace"
                android:text="@string/conf_title_2"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:fontFamily="monospace"
                android:text="@string/mean"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="Conf(X => Y) = "
                    android:textColor="#555"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="supp(X U Y)"
                        android:textColor="#555"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="2dip"
                        android:layout_marginTop="3dip"
                        android:background="#555" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="supp(X)"
                        android:textColor="#555"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/cont_and_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1eb1fc"
            android:text="@string/enter_and_cont"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>