<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.huy.monthlyfinance.ProductGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#a24ade"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:src="@mipmap/ic_arrow_back_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_group"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageGroup"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/circle_light_green"
                    android:padding="15dip"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip">

                    <EditText
                        android:id="@+id/edtProductGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:background="#0000"
                        android:hint="@string/enter_name"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="#bbb" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="#0000"
                    android:hint="@string/pick_image"
                    android:textSize="20sp"
                    android:layout_margin="10dip"/>

                <GridView
                    android:id="@+id/gridImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:numColumns="5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dip"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dip"
                android:layout_weight="1"
                android:background="#a24ade"
                android:fontFamily="sans-serif-condensed"
                android:padding="0dip"
                android:text="@string/confirm"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dip"
                android:layout_weight="1"
                android:background="#a24ade"
                android:fontFamily="sans-serif-condensed"
                android:padding="0dip"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
